# olio-ohjelmointi

./: .gitignore  main.cpp
Shakkikello/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Vk4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Vk5/vk5/: main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Vk6/: CMakeLists.txt  Student.cpp  Student.h  Utils.cpp  Utils.h  main.cpp
